--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cat-energy",
+  "homepage": "https://andrew1a.github.io/cat-energy",
   "version": "2.0.7",
   "private": true,
   "description": "Личный проект «{{projectTitle}}» от HTML Academy",
@@ -27,6 +28,7 @@
     "lint:scripts": "eslint . --ignore-path .gitignore --ignore-pattern vendor/",
     "optimize": "npm-run-all -p optimize:**",
     "optimize:raster": "gulp optimizeRaster",
+    "deploy": "gh-pages -d build",
     "optimize:vector": "gulp optimizeVector"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "browserslist-to-esbuild": "2.1.1",
     "eslint": "8.57.0",
     "eslint-config-htmlacademy": "10.0.1",
+    "gh-pages": "^6.3.0",
     "gulp": "4.0.2",
     "gulp-esbuild": "0.12.0",
     "gulp-html-bemlinter": "3.0.1",
